feat(demo): introduce demo landing experience

--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -15,5 +15,6 @@
     <li data-role-key="corporate"><a href="./Corporate.html"  data-key="corporate" data-i18n="nav.corporate">Corporate</a></li>
     <li data-role-key="devices"><a href="./Devices.html"   data-key="devices" data-i18n="nav.devices">Devices</a></li>
     <li data-role-key="settings"><a href="./Settings.html"  data-key="settings" data-i18n="nav.settings">Settings</a></li>
+    <li data-role-key="demo"><a href="./Demo.html"      data-key="demo" data-i18n="nav.demo">Demo</a></li>
   </ul>
 </nav>
